--- a/app/Src/Screen2.fx.yaml
+++ b/app/Src/Screen2.fx.yaml
@@ -92,10 +92,11 @@ Screen2 As screen:
                 DefaultSelectedItems: =Parent.Default
                 DisplayFields: =["Value"]
                 DisplayMode: =Parent.DisplayMode
+                IsSearchable: =false
                 Items: =Choices([@'Power Outage Recovery Tracking'].Action)
                 PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
                 SearchFields: =["Value"]
-                SearchItems: =Choices('Power Outage Recovery Tracking'.Action,DataCardValue2.SearchText)
+                SearchItems: =[]
                 Tooltip: =Parent.DisplayName
                 Visible: =false
                 Width: =Parent.Width - 60
@@ -157,10 +158,11 @@ Screen2 As screen:
                 DefaultSelectedItems: =Parent.Default
                 DisplayFields: =["Value"]
                 DisplayMode: =Parent.DisplayMode
+                IsSearchable: =false
                 Items: =Choices([@'Power Outage Recovery Tracking'].'Business Unit')
                 PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
                 SearchFields: =["Value"]
-                SearchItems: =Choices('Power Outage Recovery Tracking'.'Business Unit',DataCardValue3.SearchText)
+                SearchItems: =[]
                 SelectMultiple: =false
                 Tooltip: =Parent.DisplayName
                 Width: =Parent.Width - 60
@@ -223,10 +225,11 @@ Screen2 As screen:
                 DefaultSelectedItems: =Parent.Default
                 DisplayFields: =["Value"]
                 DisplayMode: =Parent.DisplayMode
+                IsSearchable: =false
                 Items: =Choices([@'Power Outage Recovery Tracking'].Phase)
                 PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
                 SearchFields: =["Value"]
-                SearchItems: =Choices('Power Outage Recovery Tracking'.Phase,DataCardValue4.SearchText)
+                SearchItems: =[]
                 SelectMultiple: =false
                 Tooltip: =Parent.DisplayName
                 Width: =Parent.Width - 60
