--- a/app/CanvasManifest.json
+++ b/app/CanvasManifest.json
@@ -115,7 +115,7 @@
     "InstrumentationKey": "",
     "LocalDatabaseReferences": "{}",
     "ManualOfflineProfileId": "",
-    "Name": "PowerApps_Co-Authoring App",
+    "Name": "app",
     "OriginatingVersion": "1.330",
     "ParserErrorCount": 0
   },
