--- a/app/CanvasManifest.json
+++ b/app/CanvasManifest.json
@@ -120,7 +120,7 @@
     "ParserErrorCount": 0
   },
   "PublishInfo": {
-    "AppName": "app",
+    "AppName": "PowerApps_Co-Authoring App",
     "BackgroundColor": "RGBA(0,176,240,1)",
     "IconColor": "RGBA(255,255,255,1)",
     "IconName": "Edit",
