--- a/app/Src/Screen1.fx.yaml
+++ b/app/Src/Screen1.fx.yaml
@@ -56,7 +56,7 @@ Screen1 As screen:
     Button1 As button:
         OnSelect: |-
             =//Sundar
-            Set(var1,"Sundar");
+            Set(var1,"Sundar kESHVA");
             Set(var2,"")
         Text: ="Button"
         X: =224
