--- a/app/Src/Screen1.fx.yaml
+++ b/app/Src/Screen1.fx.yaml
@@ -51,7 +51,7 @@ Screen1 As screen:
             Set(var1,"Sundar kESHVA");
             Set(var2,"");
             //
-        Text: ="Submit"
+        Text: ="Done"
         X: =1206
         ZIndex: =8
 
