--- a/app/Src/Screen1.fx.yaml
+++ b/app/Src/Screen1.fx.yaml
@@ -8,6 +8,7 @@ Screen1 As screen:
 
     Form1 As form:
         BorderThickness: =5
+        Fill: =RGBA(251, 188, 159, 1)
         Height: =190
         Width: =646
         X: =720
