--- a/Meeting Agenda App/Src/HomePage.fx.yaml
+++ b/Meeting Agenda App/Src/HomePage.fx.yaml
@@ -1646,7 +1646,7 @@ HomePage As screen:
                     =//Office365Users.UserProfile(ThisItem.Organizer).DisplayName
                     //If(!IsBlank(ThisItem.Organizer), Office365Users.UserProfile(ThisItem.Organizer).DisplayName,false)
                     If(
-                        !IsBlank(ThisItem.Organizer) && "@ilink-systems.com" in ThisItem.Organizer && !IsEmpty(
+                        !IsBlank(ThisItem.Organizer) /* && "@ilink-systems.com"  ThisItem.Organizer */ && !IsEmpty(
                             Office365Users.SearchUser(
                                 {
                                     searchTerm: ThisItem.Organizer,
