--- a/Meeting Agenda App/CanvasManifest.json
+++ b/Meeting Agenda App/CanvasManifest.json
@@ -67,7 +67,7 @@
       "longlivingcache": false,
       "mobilenativerendering": false,
       "namedformulas": false,
-      "nativecdsexperimental": false,
+      "nativecdsexperimental": true,
       "onegrid": false,
       "optimizedforteamsmeeting": false,
       "packagemodernruntime": false,
@@ -85,9 +85,9 @@
       "supportcolumnnamesasidentifiers": false,
       "tabledoesntwraprecords": true,
       "untypedobject": false,
-      "usedisplaynamemetadata": false,
+      "usedisplaynamemetadata": true,
       "useenforcesavedatalimits": false,
-      "useexperimentalcdsconnector": false,
+      "useexperimentalcdsconnector": true,
       "useexperimentalsqlconnector": false,
       "useguiddatatypes": false,
       "usenonblockingonstartrule": false,
