--- a/Meeting Agenda App/Src/HomePage.fx.yaml
+++ b/Meeting Agenda App/Src/HomePage.fx.yaml
@@ -423,7 +423,7 @@ HomePage As screen:
                     false
                 )
             );
-            Collect(
+            ClearCollect(
                 CalendarLocalizedLabel,
                 {Value: "Calendar"},
                 {Value: "Kalender"},
