--- a/Meeting Agenda App/Src/HomePage.fx.yaml
+++ b/Meeting Agenda App/Src/HomePage.fx.yaml
@@ -60,6 +60,7 @@ HomePage As screen:
         ZIndex: =4
 
     toggleViewAgendaMeetings As toggleSwitch:
+        AccessibleLabel: ="toggleViewAgendaMeetings"
         BorderColor: =RGBA(48, 55, 120, 1)
         BorderStyle: =
         Height: =30
@@ -88,7 +89,6 @@ HomePage As screen:
                     false
                 )
             );
-        ShowLabel: =false
         TabIndex: =9
         Tooltip: ="Show Meetings whose have Agenda"
         TrueFill: =RGBA(48, 55, 120, 1)
@@ -118,6 +118,7 @@ HomePage As screen:
         ZIndex: =20
 
         inputSearchText As text:
+            AccessibleLabel: ="inputSearchText"
             Default: =""
             Fill: =RGBA(0, 0, 0, 0)
             Font: =Font.Lato
@@ -138,6 +139,7 @@ HomePage As screen:
             ZIndex: =11
 
         Icon2_2 As icon.Search:
+            AccessibleLabel: ="Icon"
             Height: =24
             Icon: =Icon.Search
             TabIndex: =8
@@ -156,6 +158,7 @@ HomePage As screen:
 
         lblMeetingHeading As label:
             Color: =RGBA(0, 0, 0, 0.66)
+            FocusedBorderThickness: =1
             Font: =Font.Lato
             FontWeight: =FontWeight.Bold
             Height: =30
@@ -168,6 +171,7 @@ HomePage As screen:
             ZIndex: =9
 
         lblHeading_1 As label:
+            FocusedBorderThickness: =1
             Font: =Font.Lato
             Height: =30
             Size: =14
@@ -362,6 +366,7 @@ HomePage As screen:
             ZIndex: =7
 
         Icon10_1 As icon.Add:
+            AccessibleLabel: ="Icon"
             Color: =RGBA(255, 255, 255, 1)
             Height: =18
             Icon: =Icon.Add
@@ -374,6 +379,7 @@ HomePage As screen:
             ZIndex: =8
 
     icon_RefreshMeeting As icon.Reload:
+        AccessibleLabel: ="icon_RefreshMeeting"
         BorderStyle: =//BorderStyle.Solid
         Color: =RGBA(56, 86, 153, 1)
         Height: =24
@@ -905,6 +911,7 @@ HomePage As screen:
         ZIndex: =39
 
     "UpcomingGallery As gallery.'BrowseLayout_Vertical_TwoTextOneImageVariant_ver4.0'":
+        AccessibleLabel: ="UpcomingGallery"
         BorderStyle: =//BorderStyle.Solid
         Height: =560
         Items: |-
@@ -1805,6 +1812,7 @@ HomePage As screen:
                 ZIndex: =18
 
     "PastGallery As gallery.'BrowseLayout_Vertical_TwoTextOneImageVariant_ver4.0'":
+        AccessibleLabel: ="PastGallery"
         BorderStyle: =//BorderStyle.Solid
         Height: =560
         Items: |+
@@ -2684,6 +2692,7 @@ HomePage As screen:
         ZIndex: =58
 
     "'Home Icon_9' As icon.Home":
+        AccessibleLabel: ="Home Icon"
         Height: =24
         Icon: =Icon.Home
         OnSelect: |-
@@ -2696,6 +2705,7 @@ HomePage As screen:
                 DisableButton,
                 false
             );
+        TabIndex: =1
         Tooltip: ="Home Page"
         Width: =25
         X: =16
@@ -2738,6 +2748,7 @@ HomePage As screen:
         ZIndex: =62
 
         rectTopMenu As rectangle:
+            AccessibleLabel: ="rectTopMenu"
             Fill: =RGBA(48, 55, 120, 1)
             Height: =50
             TabIndex: =1
@@ -2745,6 +2756,7 @@ HomePage As screen:
             ZIndex: =13
 
         imageLogo As image:
+            AccessibleLabel: ="imageLogo"
             Height: =50
             Image: =logo
             TabIndex: =1
@@ -2822,6 +2834,7 @@ HomePage As screen:
             ZIndex: =19
 
         AddTitle As text:
+            AccessibleLabel: ="AddTitle"
             BorderColor: =RGBA(0, 18, 107, 1)
             BorderStyle: =BorderStyle.None
             Color: =RGBA(153, 153, 153, 1)
@@ -2872,6 +2885,7 @@ HomePage As screen:
             ZIndex: =22
 
         StartTime As datepicker:
+            AccessibleLabel: ="StartTime"
             BorderColor: =RGBA(0, 18, 107, 1)
             BorderStyle: =BorderStyle.None
             CalendarHeaderFill: =RGBA(56, 96, 178, 1)
@@ -2911,6 +2925,7 @@ HomePage As screen:
             ZIndex: =24
 
         EndTime As datepicker:
+            AccessibleLabel: ="EndTime"
             BorderColor: =RGBA(0, 18, 107, 1)
             BorderStyle: =BorderStyle.None
             CalendarHeaderFill: =RGBA(56, 96, 178, 1)
@@ -2989,6 +3004,7 @@ HomePage As screen:
             ZIndex: =28
 
         AttendeesList As combobox:
+            AccessibleLabel: ="AttendeesList"
             BorderColor: =RGBA(0, 18, 107, 1)
             BorderThickness: =0
             ChevronBackground: =RGBA(0, 0, 0, 0)
@@ -3045,6 +3061,7 @@ HomePage As screen:
             ZIndex: =29
 
         Radio2_2 As radio:
+            AccessibleLabel: ="Radio"
             BorderColor: =RGBA(0, 0, 0, 0)
             Color: =RGBA(59, 59, 59, 1)
             Default: ="Organizer"
@@ -3068,6 +3085,7 @@ HomePage As screen:
             ZIndex: =30
 
         Toggle1_2 As toggleSwitch:
+            AccessibleLabel: ="Toggle"
             BorderColor: =RGBA(0, 0, 0, 0)
             Color: =RGBA(0, 0, 0, 1)
             Default: =If(Radio2_2.Selected.Value="Organizer",false,true)
@@ -3397,10 +3415,12 @@ HomePage As screen:
             ZIndex: =37
 
         Icon10 As icon.CancelBadge:
+            AccessibleLabel: ="Icon"
             Color: =RGBA(48, 55, 120, 1)
             Height: =32
             Icon: =Icon.CancelBadge
             OnSelect: =Set(varShowCreateMeeting,false)
+            TabIndex: =1
             Visible: =varShowCreateMeeting
             Width: =32
             X: =1326
@@ -3408,6 +3428,7 @@ HomePage As screen:
             ZIndex: =38
 
         "Gallery4_2 As gallery.'BrowseLayout_Horizontal_TwoTextOneImageVariant_ver4.0'":
+            AccessibleLabel: ="gallery"
             BorderColor: =RGBA(0, 0, 0, 0)
             Fill: =RGBA(255, 255, 255, 1)
             Height: =70
@@ -3444,6 +3465,7 @@ HomePage As screen:
                     )
                 )
             OnSelect: =
+            TabIndex: =1
             TemplatePadding: =0
             TemplateSize: =149
             Visible: =varShowCreateMeeting
@@ -3520,6 +3542,7 @@ HomePage As screen:
                 PaddingLeft: =2
                 PaddingRight: =2
                 PaddingTop: =2
+                TabIndex: =1
                 Width: =14
                 X: =134
                 Y: =29
@@ -3557,6 +3580,7 @@ HomePage As screen:
                 ZIndex: =6
 
         MeetingEndRange_1 As dropdown:
+            AccessibleLabel: ="MeetingEndRange"
             BorderColor: =RGBA(0, 18, 107, 1)
             BorderThickness: =0
             ChevronBackground: =RGBA(0, 0, 0, 0)
@@ -3594,6 +3618,7 @@ HomePage As screen:
             ZIndex: =49
 
         MeetingStartRange_1 As dropdown:
+            AccessibleLabel: ="MeetingStartRange"
             BorderColor: =RGBA(0, 18, 107, 1)
             BorderThickness: =0
             ChevronBackground: =RGBA(0, 0, 0, 0)
