--- a/Meeting Agenda App/Src/ResourceScreen.fx.yaml
+++ b/Meeting Agenda App/Src/ResourceScreen.fx.yaml
@@ -398,6 +398,7 @@ ResourceScreen As screen:
         bg_11 As rectangle:
             Fill: =RGBA(248, 249, 255, 1)
             Height: =718
+            TabIndex: =0
             Width: =61
             X: =2
             Y: =50
@@ -407,6 +408,7 @@ ResourceScreen As screen:
             Height: =24
             Icon: =Icon.Hamburger
             OnSelect: =Navigate('MeetingDetails Screen', ScreenTransition.Fade)
+            TabIndex: =0
             Tooltip: ="MeetingDetails"
             Width: =24
             X: =18
@@ -426,6 +428,7 @@ ResourceScreen As screen:
                     DisableButton,
                     false
                 );
+            TabIndex: =0
             Tooltip: ="Home Page"
             Width: =24
             X: =21
@@ -436,6 +439,7 @@ ResourceScreen As screen:
             Height: =24
             Icon: =Icon.Add
             OnSelect: =Navigate(ResourceScreen, ScreenTransition.Fade)
+            TabIndex: =0
             Tooltip: ="Resource"
             Width: =24
             X: =18
